--- a/media/kjhealy-screen.css
+++ b/media/kjhealy-screen.css
@@ -1,194 +1,105 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* end of reset */
-
-
+/* --------------------------- */
+/* 🌟 Custom Chinese CV Styles */
+/* --------------------------- */
 
 body {
-	font: normal normal 400;
-	font-size: 80%;
-	line-height: 1.5em;
-	/*also written as...  font: normal normal 400 100%/1.5em;*/
-	font-family: Verdana,sans-serif;
-	margin-top: 1em;
-	margin-left: 1em;
+    font-size: 15px !important;
+    line-height: 1.55 !important;
+    font-family: "Helvetica", "PingFang SC", "Microsoft YaHei", sans-serif !important;
+    color: #222 !important;
 }
 
-p {
-	position: relative;
-	left: 33%;
-	margin-bottom: 0.7em;
-	margin-right: 0;
-	width: 65%;
-}
-
-code {
-	font: normal normal;
-	font-size: 60%;
-	/*line-height: 1em;*/
-	font-family: Menlo,monospace,sans-serif;
-	color: #aaa;
-}
-
-p code {
-	position: absolute;
-	left: -14%;
-}
-
-
-ul { 
-	position: relative;
-	left: 33%;
-	width: 65%;
-	margin-bottom: 1.5em;
-	margin-top: -0.5em;
-}
-
-/*uncomment to get dashes in the list*/
-/*li:before {
-	content: "-";
-	position: relative;
-	left: -0.25em;
-}*/
-
-li {
-	/*second line indent*/
-	padding-left: 1.25em;
-	text-indent: -1.25em;
-	/*color: #777;*/
-}
-
-li ul {
-	position: relative;
-	left: 0;
-	width: 100%;
-	margin-top: 0.25em;
-}
-
-h1,h2,h3,h4 {
-	font-weight: 400;
-	font-family: Cousine,Verdana,sans-serif;
-	width: 65%;
-}
-
+/* Title (Name) */
 h1 {
-	text-align: left;
-	font-size: 3em;
-	line-height: 1em;
-	position: relative;
-	left: 33%;
+    font-size: 32px !important;
+    margin-bottom: 5px !important;
+    font-weight: 700 !important;
 }
 
-h1+p { 
-	/*subtitle*/
-	font-style: italic;
-	font-size: 110%;
-}
-
+/* Section headings */
 h2 {
-	font-size: 1.1em;
-	color: #a00;
-	margin-top: 3em;
-	position: relative;
-	top: 1.4em;
-	text-align: right;
-	width: 20%;
+    font-size: 20px !important;
+    margin-top: 22px !important;
+    margin-bottom: 6px !important;
+    font-weight: 600 !important;
 }
 
+/* Job titles */
 h3 {
-	font-size: 1em;
-	line-height: 2em; 
-	position: relative;
-	top: 1.7em;
-	text-align: right;
-	width: 20%;
+    font-size: 17px !important;
+    margin-top: 14px !important;
+    margin-bottom: 4px !important;
 }
 
+/* Reduce excessive spacing between sections */
+section {
+    margin-top: 10px !important;
+    margin-bottom: 5px !important;
+}
+
+/* Paragraph adjustments */
+p {
+    margin: 4px 0px !important;
+    font-size: 15px !important;
+}
+
+/* Tighter bullet spacing */
+ul {
+    margin-top: 4px !important;
+    margin-bottom: 4px !important;
+}
+ul li {
+    margin-bottom: 3px !important;
+    line-height: 1.45 !important;
+}
+
+/* Improve column layout (left + right) */
+#main {
+    width: 100% !important;
+    max-width: 1020px !important;
+    margin: auto !important;
+}
+
+#main > section {
+    padding-left: 0 !important;
+}
+
+/* Sidebar (optional) — expand width */
+#sidebar {
+    width: 26% !important;
+    padding: 10px !important;
+    font-size: 14px !important;
+}
+
+#content {
+    width: 70% !important;
+    padding-left: 20px !important;
+}
+
+/* Links */
 a {
-	color: inherit;
-	/*text-decoration:none*/
+    color: #0366d6 !important;
+    text-decoration: none !important;
 }
 
-a:hover {
-	color:#39f
+/* Reduce headline spacing in content area */
+div#content h3 {
+    margin-top: 10px !important;
+    margin-bottom: 4px !important;
 }
 
-#webaddress {
-	margin-top: 1em;
-	position: relative;
-	left: 33%;
-	color: #aaa;
-	font-family: Menlo,monospace,sans-serif;
-	font-size: 80%;
+/* Optional: Remove top margins between major blocks */
+div#content h2:first-child {
+    margin-top: 10px !important;
 }
 
-#webaddress a {
-	text-decoration: none;
+/* Reduce gap between Summary and Employment */
+#summary + section {
+    margin-top: 8px !important;
 }
 
-em {
-	font-weight: bold;
-	font-style: italic;
+/* A cleaner divider line (if needed) */
+hr {
+    margin: 12px 0 !important;
+    border-top: 1px solid #ccc !important;
 }
-
-strong {
-	font-weight: bold;
-}
-
-#address {
-	display: none;
-}
-
-
-
-/*
-@media only screen and (max-width: 480px) {
-	make one column somehow...
-}*/
